force-app/main/default/objects/Account/fields/autoNum__c.field-meta.xml
<CustomField>
    <fullName>autoNum__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>autoNum</label>
    <type>AutoNumber</type>
</CustomField>