force-app/main/default/objects/Account/fields/Copado_Check__c.field-meta.xml
<CustomField>
    <fullName>Copado_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copado Check</label>
    <type>Checkbox</type>
</CustomField>