force-app/main/default/objects/Account/fields/Number_of_contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_contacts__c</fullName>
    <label>Number of contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>