force-app/main/default/objects/Account/recordTypes/Volunteer_Organization_Account_record_type.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Organization_Account_record_type</fullName>
    <active>true</active>
    <description>Account page for creating volunteer organizations</description>
    <label>Volunteer Organization Account record type</label>
</RecordType>