force-app/main/default/objects/Account/validationRules/Account_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Type) == &apos;Customer - Direct&apos;,TEXT(Type) == &apos;Customer - Channel&apos;), ISCHANGED( Name))</errorConditionFormula>
    <errorMessage>Account Name cannot be changed</errorMessage>
</ValidationRule>