force-app/main/default/objects/Account/validationRules/Account_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_2</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
   NOT(
       OR(BillingCountry == &apos;US&apos;,BillingCountry ==  
       &apos;USA&apos;,BillingCountry == &apos;United States&apos;)
       ),
   NOT(
       OR(ShippingCountry == &apos;US&apos;,ShippingCountry ==  
       &apos;USA&apos;,ShippingCountry == &apos;United States&apos;)
       ),
   Len(BillingState) != 2,
   Len(ShippingState) != 2)</errorConditionFormula>
    <errorMessage>Enter a valid state and country</errorMessage>
</ValidationRule>